<?xml version="1.0"?>
<package format="2">
  <name>create_navigation</name>
  <version>0.0.0</version>
  <description>The create_navigation package</description>

  <maintainer email="nnaraindev@gmail.com">Natesh Narain</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
