<?xml version="1.0"?>
<package format="2">
  <name>create_navigation</name>
  <version>0.0.0</version>
  <description>The create_navigation package</description>

  <maintainer email="nnaraindev@gmail.com">Natesh Narain</maintainer>

  <license>BSD</license>

  <depend>amcl</depend>
  <depend>create_msgs</depend>
  <depend>explore_lite</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base</depend>
  <depend>octomap_mapping</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
